# Opentive-campage

./: .gitignore  DEPLOY_VPS_NGINX.md  FRONTEND_ANTIGRAVITY.md  docker-compose.yml
ms-ai/: .env.example  Dockerfile  pyproject.toml
ms-ai/app/: config.py  html_validation.py  llm.py  main.py  pipeline.py  schemas.py
ms-ai/tests/: test_api.py  test_html_validation.py
ms-backend/: .env.example  pyproject.toml
ms-backend/alembic/: env.py
ms-backend/alembic/versions/: 0001_initial.py
ms-backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
ms-backend/app/api/routes/: auth.py  campaigns.py  contacts.py  events.py  internal.py  lead_webhook.py  lists.py  templates.py  webhooks.py
ms-backend/email_marketing_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ms-backend/tests/: test_core.py
ms-email/: .env.example  Dockerfile  pyproject.toml
ms-email/app/: config.py  database.py  mailer.py  main.py  rendering.py  security.py  worker.py
ms-email/tests/: test_api.py  test_core.py
ms-frontend/: Dockerfile  package-lock.json  package.json
ms-frontend/app/: globals.css  layout.tsx  providers.tsx
ms-frontend/app/(auth)/: layout.tsx
ms-frontend/app/(auth)/cadastro/: page.tsx
ms-frontend/app/(auth)/login/: page.tsx
ms-frontend/app/(dashboard)/: layout.tsx
ms-frontend/app/(dashboard)/campanhas/: page.tsx
ms-frontend/app/(dashboard)/campanhas/nova/: page.tsx
ms-frontend/app/(dashboard)/configuracoes/: page.tsx
ms-frontend/app/(dashboard)/contatos/: page.tsx
ms-frontend/app/(dashboard)/dashboard/: page.tsx
ms-frontend/app/(dashboard)/listas/: page.tsx
ms-frontend/app/(dashboard)/templates/: page.tsx
ms-frontend/app/(dashboard)/templates/novo/: page.tsx
ms-frontend/app/(dashboard)/webhooks/: page.tsx
ms-frontend/lib/api/: client.ts
ms-frontend/lib/auth/: auth-context.tsx
ms-frontend/lib/validations/: schemas.ts
ms-frontend/tests/: basic.js
ms-frontend/types/: index.ts
