[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "email-marketing-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.5,<3",
  "openai>=1.50,<2",
  "bleach>=6.1,<7",
  "tinycss2>=1.3,<2",
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1", "httpx>=0.27,<1"]

[tool.ruff]
line-length = 100
