[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "email-marketing-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "pydantic-settings>=2.5,<3",
  "pyjwt>=2.9,<3",
  "pwdlib[argon2]>=0.2,<1",
  "email-validator>=2.2,<3",
  "httpx>=0.27,<1",
  "redis>=5,<6",
  "bleach>=6.1,<7",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.6,<1", "aiosqlite>=0.20,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
