[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "email-marketing-sender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "asyncpg>=0.29,<1",
  "redis>=5,<6",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.5,<3",
  "jinja2>=3.1,<4",
  "aiosmtplib>=3,<4",
  "bleach>=6.1,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.6,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
